# koishi-plugin-nhentai-downloader

./: .gitignore  .npmignore  LICENSE  package.json  readme.md  yakumo.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-wasm.yml
locales/: zh-CN.yml
scripts/: post-wasm-build.js
src/: api.ts  commands.ts  config.ts  constants.ts  handlers.ts  index.ts  middleware.ts  plugin.ts  processor.ts  puppeteer.ts  types.ts  utils.ts
src/commands/: download.ts  index.ts  random.ts  search.ts
src/formatters/: gallery-formatter.ts
src/handlers/: download-handler.ts  search-handler.ts
src/middleware/: link-recognition.ts
src/processors/: canvas-processor.ts  images.ts  index.ts  pdf.ts  types.ts  wasm.ts  zip.ts
src/services/: api.ts  cache.ts  download.ts  image-cache.ts  menu-generator.ts  menu.ts  nhentai.ts
wasm-image-processor/: .gitignore  Cargo.toml  LICENSE  build.bat  build.sh
wasm-image-processor/.cargo/: config.toml
wasm-image-processor/src/: anti_censorship.rs  batch.rs  format.rs  image.rs  lib.rs
