[package]
name = "wasm-image-processor"
version = "0.1.0"
edition = "2021"
authors = ["Koishi Plugin Team"]
description = "High-performance image processing WASM module for Koishi nhentai-downloader plugin"
license = "MIT"
repository = "https://github.com/YuzuharaYuka/koishi-plugin-nhentai-downloader"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
# 升级到 image 0.25.5 并启用 rayon 进行并行处理 (准则 5: 性能与资源意识)
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
console_error_panic_hook = { version = "0.1", optional = true }
# getrandom 0.3 需要启用 wasm_js feature 来支持 WASM 环境
getrandom = { version = "0.3", features = ["wasm_js"] }
# rand 0.9 与 getrandom 0.3 兼容
rand = "0.9"
# 添加 rayon 用于并行处理
rayon = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"  # 针对大小优化，对 WASM 很重要
codegen-units = 1
lto = true  # 链接时优化

# SIMD 通过构建脚本的 RUSTFLAGS 环境变量启用
# 参见 build.bat 和 package.json 中的 build:wasm 脚本

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-simd"]
