[package]
name = "wasm-image-processor"
version = "0.1.0"
edition = "2021"
authors = ["Koishi Plugin Team"]
description = "Image processing WASM module for Koishi nhentai-downloader plugin"
license = "MIT"
repository = "https://github.com/YuzuharaYuka/koishi-plugin-nhentai-downloader"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-simd"] 
